# solis2mqtt

./: Cargo.toml  README.md
docs/: grafana-panel.json  neohub-mqtt.service  telegraf.d.influx.toml  telegraf.d.neohub.toml
src/: main.rs
