[package]
name = "solis2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.5"
rumqttc = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
